[fix] specify root max-width to fix layout problem

--- a/css/base.css
+++ b/css/base.css
@@ -274,7 +274,11 @@ table, caption, tbody, tfoot, thead, tr, th, td {
   background:transparent;
 }
 body {
-  line-height: 1;
+  max-width: 1280px;
+  line-height: 1.42875;
+  margin-left: auto;
+  margin-right: auto;
+  
 }
 
 ol, ul {
