--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,11 @@ a{ overflow: hidden; display: inline-block; }
 .table{ display: table; padding: 0; margin: 0; }
 .table .cell{ display: table-cell; padding: 0; margin: 0; }
 
-.sp_dis{ display: block; }
-.pc_dis{ display: none; }
+@media (max-width: 767px) {
+  .sp_dis{ display: block; }
+  .pc_dis{ display: none; }
+}
+
 
 @media (min-width: 768px) {
   .sp_dis{ display: none; }
@@ -222,7 +225,7 @@ background: #fff799; border-radius: 50px;  text-align: center; height: 70px;}
 #services #pro ul li p{ text-align: left; font-size: 16px; line-height: 210%;}
 /* #services #pro ul li img{ width: 100%; padding: 20px;} */
 
-#pro > ul p {font-family: sans-serif; line-height: 50% ;}
+#pro > ul p { line-height: 50% ;}
 
 #top_con03 .fl{ width: 20%; }
 #top_con03 .fr{ width: 76%; }
@@ -469,8 +472,8 @@ footer
     transform: translate3d(0, 0, 0);
 }
 
-#footer_area{ background: #fffbcc; padding: 10px 0 0;  }
-footer{ display: table; border-collapse: separate; border-spacing: 20px; }
+#footer_area{  padding: 10px 0 0;  }
+footer{ display: table; border-collapse: separate; border-spacing: 20px; background: #fffbcc;}
 footer #nav,
 footer #info01,
 footer #info02{ display: table-cell; width: 33.3333%; vertical-align: top; }
